GamesDeck/assets/app.css
@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=auto");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --color-bg: black;
    --color-bg-secondary: #18181b;
    --color-bg-tertiary: #26262c;
    --color-text-main: #f8fafc;
    --color-primary: #199afc;
    --color-text-secondary: #53535f;
    --color-accent: #ff8280;
    --color-primary-hover: #06b6d4;
  }

  body {
    background-color: var(--color-bg);
    color: var(--color-text-main);

    ::selection {
      background-color: rgba(34, 211, 238, 0.3);
      color: var(--color-text-main);
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      @apply font-bold text-main;
    }

    h1 {
      @apply text-4xl md:text-5xl;
    }

    h2 {
      @apply text-3xl md:text-4xl;
    }

    h3 {
      @apply text-2xl md:text-3xl;
    }
  }
}

@layer components {
  .focus-ring-3sides:focus-within {
    box-shadow:
      inset 2px -2px 0 0 var(--color-primary),
      inset -2px -2px 0 0 var(--color-primary),
      inset -2px 2px 0 0 var(--color-primary);
  }
}

